--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-calendar": "^4.1.0",
@@ -16,6 +17,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
